test/fail/parameter-count-override.grace
constructor above {
  method name(param) {}
}

object {
  inherits above

  method name(first, second) {}
}
